--- a/template/DEBIAN/control
+++ b/template/DEBIAN/control
@@ -1,13 +1,13 @@
 Package: opengist
-Version: 1.7.3
+Version: {VERSION}
 Section: utils
 Priority: optional
-Architecture: i386
+Architecture: {ARCH}
 Maintainer: Thomas Miceli <thomiceli@github.com>
 Depends: adduser
 Homepage: https://github.com/Aetherinox/opengist-debian
 Description: Self-hosted pastebin powered by Git, open-source alternative to Github
  Gist. Opengist is a self-hosted pastebin powered by Git. All snippets are
  stored in a Git repository and can be read and/or modified using standard Git
- commands, or with the web interface. It is similar to GitHub Gist, but 
+ commands, or with the web interface. It is similar to GitHub Gist, but
  open-source and could be self-hosted.
