--- a/template/usr/share/applications/opengist.desktop
+++ b/template/usr/share/applications/opengist.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=Opengist
 GenericName=Opengist
-Version=1.7.3
+Version={VERSION}
 Comment=Start Opengist server
 Type=Application
 Icon=opengist
